# Vesper

./: AGENTS.md  Cargo.toml
.cargo/: config.toml  runner.sh
common/: Cargo.toml
common/src/: button_array.rs  command.rs  lib.rs
electronics/: leds_l.kicad_sch  leds_l.kicad_sch-bak  leds_r.kicad_sch  left.kicad_sch  mcu_l.kicad_sch  mcu_l.kicad_sch-bak  right.kicad_sch  vesper.kicad_prl  vesper.kicad_pro  vesper.kicad_sch  vesper_mech.kicad_prl  vesper_mech.kicad_pro
master/: Cargo.toml  build.rs
master/src/: bootloader.rs  hid.rs  keyboard.rs  led.rs  main.rs  main.rs.bak
mechanics/: Vesper-L.stl  Vesper.FCStd  Vesper_L_Top.FCStd
slave/: Cargo.toml  build.rs  memory.x
slave/src/: main.rs
