[package]
name = "common"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
embassy-embedded-hal = { workspace = true }
embassy-sync = { workspace = true }
embassy-executor = { workspace = true }
embassy-time = { workspace = true }
embassy-rp = { workspace = true }
embassy-usb = { workspace = true }
embassy-net = { workspace = true }
embassy-net-wiznet = { workspace = true }
embassy-futures = { workspace = true }
embassy-usb-logger = { workspace = true }

defmt = { workspace = true }
defmt-rtt = { workspace = true }

fixed = { workspace = true }
fixed-macro = { workspace = true }

serde = { workspace = true }
serde-json-core = { workspace = true }

assign-resources = { workspace = true }
tb6612fng = { workspace = true }

cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
critical-section = { workspace = true }
panic-probe = { workspace = true }

display-interface-spi = { workspace = true }
embedded-graphics = { workspace = true }
mipidsi = { workspace = true }
display-interface = { workspace = true }

byte-slice-cast = { workspace = true }
smart-leds = { workspace = true }
heapless = { workspace = true }
usbd-hid = { workspace = true }

embedded-hal-1 = { workspace = true }
embedded-hal-async = { workspace = true }
embedded-hal-bus = { workspace = true }
embedded-io-async = { workspace = true }
embedded-storage = { workspace = true }

static_cell = { workspace = true }
portable-atomic = { workspace = true }
log = { workspace = true }
embedded-sdmmc = { workspace = true }

num_enum = { workspace = true }

postcard = { workspace = true }

